[package]
name = "nginx-acme"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
constcat = "0.6.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-serde = "2.1.1"
hyper = { version = "1.6.0", features = ["client", "http1"] }
iri-string = "0.7.9"
libc = "0.2.174"
nginx-sys = "0.5.0"
ngx = { version = "0.5.0", features = ["async", "serde", "std"] }
openssl = { version = "0.10.74", features = ["bindgen"] }
openssl-foreign-types = { package = "foreign-types", version = "0.3" }
openssl-sys = { version = "0.9.110", features = ["bindgen"] }
scopeguard = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
siphasher = { version = "1.0.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
zeroize = "1.8.1"

[features]
default  = ["export-modules"]
# Generate `ngx_modules` table with module exports
# The exports table is required for building loadable modules with --crate-type cdylib
# outside of the NGINX buildsystem. However, cargo currently does not detect
# this configuration automatically.
export-modules = []

[profile.release]
codegen-units = 1
lto = true
